# setuptools-grpc

./: .bumpversion.cfg  .git-blame-ignore-revs  .gitignore  CHANGELOG.rst  MANIFEST.in  README.rst  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: quality.yml  test.yml
setuptools_grpc/: __init__.py  _utils.py  build_backend.py  build_grpc.py
tests/: test_build_grpc.py  test_init.py
tests/project_no_config/: pyproject.toml
tests/project_no_protos/: pyproject.toml
tests/project_protos/: setup.cfg
tests/project_protos/example/: service.proto
