[metadata]
name = setuptools-grpc
version = 0.5
author = Jan Musílek
author_email = jan.musilek@nic.cz
description = Plugin for setuptools and grpc / protobuf python module build
url = https://github.com/CZ-NIC/setuptools-grpc
long_description = file: README.rst
license = GPLv3+
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Build Tools

[options]
zip_safe = false
packages = find:
include_package_data = true
python_requires = ~=3.8
install_requires =
    setuptools
    grpcio-tools ~= 1.49

[options.entry_points]
distutils.commands =
    build_grpc = setuptools_grpc.build_grpc:build_grpc

[options.extras_require]
quality =
    black
    doc8
    flake8
    isort
tests =
    pytest
    pytest-cov
    testfixtures

[isort]
profile = black
line_length = 99

[flake8]
max-line-length = 99
extend-ignore = E203

[doc8]
max-line-length = 120
allow-long-titles = true
